feat(gapi): implemented login api
